--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project HTML Sederhana</title>
- 
+  
 </head>
 <body>
   <header>
     <h1>My Page</h1>
+    <a href="contact.html">kontak </a>
+    <a href="gallery.html">gallery</a>
+    <a href="blog.html">blog</a>
   </header>
   <main>
     <section id="about">
       <h2>Tentang</h2>
       <p>Website ini dibuat untuk [TUGAS] Project.01-HTML</p>
+      
     </section>
     <section id="services">
       <h2>Layanan</h2>
@@ -25,7 +29,7 @@
     </section>
     <section id="contact">
       <h2>Kontak</h2>
-      <p>Email: <a href="alfonsusmarco4@gmail.com">info@example.com</a></p>
+      <p>Email:alfonsusmarco4@gmail.com</p>
       <p>Telepon: +62 812 404 587 03</p>
     </section>
   </main>
