--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact -
-    <header>
-      <section id="contact">
-        <h2>Kontak</h2>
-        <p>Email:alfonsusmarco4@gmail.com</p>
-        <p>Telepon: +62 812 404 587 03</p>
-      </section>
-    </header>
+  </head>
+  <body>
+    <section id="contact">
+      <h2>Kontak</h2>
+      <p>Email:alfonsusmarco4@gmail.com</p>
+      <p>Telepon: +62 812 404 587 03</p>
+    </section>
+  </body>
+  </html>
+      
