--- a/blog.html
+++ b/blog.html
@@ -16,17 +16,17 @@
       <article>
         <h3>Tips Merawat Laptop</h3>
         <p>Berikut beberapa tips untuk merawat laptop Anda agar awet dan tahan lama...</p>
-        <a href="#">Baca Selengkapnya</a>
+        <a href="https://www.bhinneka.com/blog/bhinneka-com-bagaimana-cara-merawat-laptop-yang-baik/">Baca Selengkapnya</a>
       </article>
       <article>
         <h3>Manfaat Belajar Coding</h3>
         <p>Di era digital ini, belajar coding menjadi salah satu skill yang...</p>
-        <a href="#">Baca Selengkapnya</a>
+        <a href="https://www.liputan6.com/hot/read/5307032/apa-itu-coding-pahami-pengertian-manfaat-dan-cara-mempelajari-bagi-pemula#:~:text=Manfaat%20Coding&text=Belajar%20coding%20akan%20membuat%20kamu,untuk%20berkembang%2C%20bukan%20sebagai%20halangan.">Baca Selengkapnya</a>
       </article>
       <article>
         <h3>5 Destinasi Wisata Alam Terbaik di Indonesia</h3>
         <p>Indonesia terkenal dengan keindahan alamnya yang luar biasa...</p>
-        <a href="#">Baca Selengkapnya</a>
+        <a href="https://adv.kontan.co.id/news/5-destinasi-wisata-indah-di-indonesia-yang-patut-dikunjungi">Baca Selengkapnya</a>
       </article>
     </section>
   </main>
