--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact -
+  <title>Contact </title>
   </head>
-  <body>
-    <section id="contact">
-      <h2>Kontak</h2>
-      <p>Email:alfonsusmarco4@gmail.com</p>
-      <p>Telepon: +62 812 404 587 03</p>
-    </section>
-  </body>
+    <body>
+      <section id="contact">
+        <h2>Kontak</h2>
+        <p>Email:alfonsusmarco4@gmail.com</p>
+        <p>Telepon: +62 812 404 587 03</p>
+      </section>
+    </body>
+  </header>
+ 
   </html>
       
