--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact </title>
-  </head>
-    <body>
-      <section id="contact">
-        <h2>Kontak</h2>
-        <p>Email:alfonsusmarco4@gmail.com</p>
-        <p>Telepon: +62 812 404 587 03</p>
-      </section>
-    </body>
-  </header>
- 
-  </html>
-      
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="styleContact.css">
+  <title>Contact Page.</title>
+</head>
+<body>
+  <section class="contact"> 
+    <div class="contact__container">
+      <h2>Have Question?</h2>
+      <div class="contact__wrapper">
+        <div class="contact__form">
+      <h3>Feel free to Contact Me on </h3>
+          <form>
+            <div class="form__group">
+              <input type="text" name="name" placeholder="Your Name">
+            </div>
+            <div class="form__group">
+              <input type="email" name="email" placeholder="Your email">
+            </div>
+            <div class="form__group">
+              <textarea name="message" placeholder="Your message"></textarea>
+            </div>
+            <button type="submit">Send Message</button>
+          </form>
+        </div>
+        <div class="contact__info">
+          <h3>Contact Information</h3>
+          <p><i class="fas fa-phone"></i> +62 81240458703</p>
+          <p><i class="fas fa-envelope"></i> alfonsusmarco4@gmail.com</p>
+          <p><i class="fas fa-map-marker-alt"></i> Universitas Sam Ratulangi , Manado , INDONESIA</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+</body>
+</html>
