--- a/gallery.html
+++ b/gallery.html
@@ -3,18 +3,69 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gallery - Project HTML Sederhana</title>
+  <link rel="stylesheet" href="Style1.css">
+
+  <title>Gallery - Project HTML Alfonsus</title>
   
 </head>
-<body>
-  <header>
-    <h1>Gallery</h1>
-  </header>
-  <main>
-    <section id="gallery-list">
-      <img src="assets/images/Image1.jpg" alt="Foto 1">
-  
-    </section>
-  </main>
-</body>
+<header>
+<div class="section__container header__container">
+ <h1>Welcome to My Gallery, <span>take a look :3</span></h1>
+</div>
+</header>
+<section class="gallery">
+<h2 class="gallery__text">Hope u enjoyed it!</h2>
+  <div class="gallery__all-grid">
+  <div class="grid-container">
+    <div>
+    <img class="grid-item grid1" src="assets/images/Image1.jpg" alt="">
+    <p>"The game that i played"</p>
+    </div>
+  </div>
+  <div class="grid-container">
+    <div>
+    <img class="grid-item grid2" src="assets/images/image2.JPG" alt="">
+    <p>"What a Good old times"</p>
+    </div>
+  </div>
+  <div class="grid-container">
+    <div>
+    <img class="grid-item grid3" src="assets/images/image3.JPG" alt="">
+    <p>"Feels wrong if we dont Take This Good Moments"</p>
+    </div>
+  </div>
+  <div class="grid-container">
+    <div>
+    <img class="grid-item grid4" src="assets/images/image4.JPG" alt="">
+    <p>"Lotsa people mean Lotsa Memories"</p>
+    </div>
+  </div>
+  <div class="grid-container">
+    <div>
+    <img class="grid-item grid4" src="assets/images/image5.jpeg" alt="">
+    <p>"4 fingers mean , loyal to 1 women , iykyk"</p>
+    </div>
+  </div>
+  <div class="grid-container">
+    <div>
+    <img class="grid-item grid4" src="assets/images/image6.jpeg" alt="">
+    <p>Miss My old Glasses Tho..</p>
+    </div>
+  </div>
+  <div class="grid-container">
+    <div>
+    <img class="grid-item grid4" src="assets/images/image7.jpeg" alt="">
+    <p>Mantehage memories.</p>
+    </div>
+  </div>
+  <div class="grid-container">
+    <div>
+    <img class="grid-item grid4" src="assets/images/image8.jpeg" alt="">
+    <p>#VisitRajaAmpat!!</p>
+    </div>
+  </div>
+</div>
+
+</section>
+ 
 </html>
