--- a/gallery.html
+++ b/gallery.html
@@ -3,15 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Style1.css">
+  <link rel="stylesheet" href="styleGalery.css">
+  
 
   <title>Gallery - Project HTML Alfonsus</title>
   
 </head>
 <header>
-<div class="section__container header__container">
- <h1>Welcome to My Gallery, <span>take a look :3</span></h1>
+  <body>
+<div class="container1">
+    <h1 class="first-text">Welcome to My Gallery, </h1>
+    <span class="text sec-text">Take a look :3</span>
 </div>
+</body>
 </header>
 <section class="gallery">
 <h2 class="gallery__text">Hope u enjoyed it!</h2>
@@ -65,6 +69,7 @@
     </div>
   </div>
 </div>
+<script src="script.js"></script>
 
 </section>
  
